# 2ra

./: .gitignore  Cargo.toml  build-android.sh  build-lib.sh  build.rs  config.toml  rust-toolchain.toml
cert/: cert.pem  key.pem
patches/: 0001-socks5-make-stream-public.patch
socks5-server/: Cargo.toml
socks5-server/src/connection/: connect.rs
src/: client.rs  config.rs  gate.rs  instance.rs  lib.rs  main.rs  message.rs  server.rs  start.rs
tests/: client_server_test.rs
ui/: pubspec.yaml
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/freedom/proto2ra/: MainActivity.kt
ui/android/app/src/profile/: AndroidManifest.xml
ui/lib/: bridge.dart  main.dart
ui/linux/: my_application.cc
