[package]
name = "lib2ra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socks5-proto = "0.3.3"
socks5-server = { git = "https://github.com/sahandevs/socks5-server", branch = "add-into-split-in-Connect-Ready" }
rustls =  { version = "0.20.7", features = ["dangerous_configuration"] }
tokio = { version = "1.20.2", features = ["full"] }
color-eyre = "0.6"
tokio-rustls = "*"
futures-util = "*"
rustls-pemfile = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
webpki-roots = "*"
async-bincode = "*"
chashmap = "2.2"
toml = "*"
uuid = { version = "*", features = ["v4"] }
pretty_env_logger = "*"
log = "*"
lazy_static = "*"
allo-isolate = "*"

[dev-dependencies]
reqwest = { version = "0.11", features = ["socks"]}
httpmock = "0.6"
portpicker="0.1.1"
fast-socks5="0.8.1"

[[bin]]
name = "2ra"
path = "src/main.rs"